--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
   <meta name="viewport" content="width=device-width">
   <title>Train Map</title>
   <link rel="shortcut icon" href="favicon.ico">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1:wght@600&display=swap" rel="stylesheet">
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.3.0/js/vendor/jquery.min.js" integrity="sha512-ju6u+4bPX50JQmgU97YOGAXmRMrD9as4LE05PdC3qycsGQmjGlfm041azyB1VfCXpkpt1i9gqXCT6XuxhBJtKg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.3.0/css/flat-ui.min.css" integrity="sha512-6f7HT84a/AplPkpSRSKWqbseRTG4aRrhadjZezYQ0oVk/B+nm/US5KzQkyyOyh0Mn9cyDdChRdS9qaxJRHayww==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.3.0/js/flat-ui.min.js" integrity="sha512-GG/1z6B4MVJdQOw35lE4otrbjd2WYV+zhXgjUR+DTeaAc7s/ijgWsexEScSOIo8J4RlhC28CVerDjYQSH89ekQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.3.0/js/vendor/jquery.min.js" integrity="sha512-ju6u+4bPX50JQmgU97YOGAXmRMrD9as4LE05PdC3qycsGQmjGlfm041azyB1VfCXpkpt1i9gqXCT6XuxhBJtKg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.3.0/css/vendor/bootstrap/css/bootstrap.min.css" integrity="sha512-cp9JSDyi0CDCvBfFKYLWXevb3r8hRv5JxcxLkUq/LEtAmOg7X0yzR3p0x/g+S3aWcZw18mhxsCXyelKWmXgzzg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/index.css" />
+  <script src="js/data.js"></script>
   <script src="js/index.js"></script>
 </head>
 
@@ -28,19 +34,19 @@
         </button>
       </div>
       <div class="collapse navbar-collapse" id="nav-menu-1">
-        <ul class="nav navbar-nav">
-          <li><a href="http://spa-game.com/images/NE_Rules.pdf" target="_blank">ルール</a></li>
-          <li><a href="http://spa-game.com/?p=4530" target="_blank">製品版情報</a></li>
-        </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="http://spa-game.com/" target="_blank">game designed by スパ帝国</a></li>
           <li><a href="https://twitter.com/rev84" target="_blank">developed by @rev84</a></li>
         </ul>
       </div>
     </div>
   </div>
 
-  <div id="game"></div>
+  <div class="container">
+    路線選択
+    <div id="line_selector"></div>
+
+    <div id="draw_stations"></div>
+  </div>
 </body>
 
 </html>
